# rfnoc-ldpc

./: CMakeLists.txt  CMakeLists_temp.txt  README.md  init_encoder_block.cpp  rebuild_uhd.sh  test.sh
apps/: CMakeLists.txt  init_encoder_block (copy).cpp  init_encoder_block.cpp  init_encoder_block_2.cpp
include/: encoder_block_control.hpp  polar_encoder_rfnoc.hpp  polar_encoder_rfnoc_wrapper.h  send.hpp
include/rfnoc/example/: CMakeLists.txt  polar_encoder_rfnoc (copy).hpp  polar_encoder_rfnoc.hpp
lib/: CMakeLists.txt  encoder_block_control.cpp  polar_encoder_rfnoc (copy).cp  polar_encoder_rfnoc.cpp  polar_encoder_rfnoc_wrapper.cpp
